<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:foreground="?android:selectableItemBackground"
    android:clickable="true"
    android:padding="5dp"
    android:layout_margin="5dp"
    app:cardCornerRadius="12dp"
    card_view:contentPadding="4dp">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/btNama"/>
        <TextView
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/titikDua"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/namaBalita"
            android:id="@+id/tvNamaBalita"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/btAlamat"/>
        <TextView
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/titikDua"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/alamatBalita"
            android:id="@+id/tvAlamatBalita"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/btLahir"/>
        <TextView
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/titikDua"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/tgllahirBalita"
            android:id="@+id/tvTglBalita"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/btKelamin"/>
        <TextView
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/titikDua"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/kelaminBalita"
            android:id="@+id/tvKelaminBalita"/>
    </LinearLayout>
</LinearLayout>
</androidx.cardview.widget.CardView>