<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        tools:context=".Activity.GiziBalitaActivity">
    <LinearLayout
        android:id="@+id/detaiBalita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/sh_detail"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:selectableItemBackground"
            android:padding="5dp"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btNama"/>
                    <TextView
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/titikDua"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/namaBalita"
                        android:id="@+id/gbNamaBalita"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btOrtu"/>
                    <TextView
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/titikDua"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/namaOrtu"
                        android:id="@+id/gbNamaOrtu"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btAlamat"/>
                    <TextView
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/titikDua"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/alamatBalita"
                        android:id="@+id/gbAlamatBalita"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btLahir"/>
                    <TextView
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/titikDua"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/tgllahirBalita"
                        android:id="@+id/gbTglBalita"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btKelamin"/>
                    <TextView
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/titikDua"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/kelaminBalita"
                        android:id="@+id/gbKelaminBalita"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/detaiBalita">
    <include
        layout="@layout/gizibalita_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    </LinearLayout>
</RelativeLayout>