<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    tools:context=".Activity.AddTbuActivity">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/ib_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_tbu"
            android:textSize="25sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrey"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/pilih_balita"/>
        <TextView
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/titikDua"/>
        <Spinner
            android:id="@+id/spinnerBalita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"></Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:padding="5dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="right"
            android:background="@color/colorGrey"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Kelamin "
            android:textSize="16sp"/>
        <TextView
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/titikDua"/>
        <EditText
            android:id="@+id/itbKelaminBalita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Laki-Laki"
            android:ems="10"
            android:textColor="@color/colorBlack"
            android:enabled="false"
            android:inputType="text"
            android:layout_marginLeft="8dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Umur "
            android:textSize="16sp"/>
        <TextView
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/titikDua"/>
        <EditText
            android:id="@+id/itbUmurBalita"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:hint="Umur Balita (Bulan)"
            android:ems="10"
            android:enabled="false"
            android:textColor="@color/colorBlack"
            android:inputType="text"
            android:layout_marginLeft="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="  Bulan"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtTinggi"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/tbuTinggiBadan"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:text="@string/titikDua"/>
        <EditText
            android:id="@+id/itbTinggiBalita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="TB / PB (cm)"
            android:ems="10"
            android:inputType="numberDecimal"
            android:layout_marginLeft="8dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txtAlert"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:textSize="12sp"
            android:textColor="@color/colorRed"
            android:text="@string/AlertTbu"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <Button
            android:clickable="true"
            android:enabled="true"
            android:id="@+id/btnsubmit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Tambah Data Gizi"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:background="#67B60E"
            android:textColor="#FFF"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>